vlib/v/checker/tests/deprecations_consts.vv
import deprecated_consts

fn main() {
	dump(deprecated_consts.a_deprecated_const)
}
